[tool.poetry]
name = "coloreflection"
version = "0.1.0"
description = "Module for using colors for the terminal, based on reflection"
authors = ["Vitaly Zorin <addefan@mail.ru>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
